RASS-266 edit court case reference content change

--- a/server/views/pages/courtAppearance/reference.njk
+++ b/server/views/pages/courtAppearance/reference.njk
@@ -16,7 +16,7 @@
                 {% include "../../partials/appearanceCaption.njk" %}
                 {{ govukInput({
                     label: {
-                        text: "Enter the case reference",
+                        text: "Enter the case reference" if isAddCourtAppearance else "Edit case reference",
                         classes: "govuk-label--l",
                         isPageHeading: true
                     },
