RASS-272 update content of next court date when editing

--- a/server/views/pages/courtAppearance/next-hearing-date.njk
+++ b/server/views/pages/courtAppearance/next-hearing-date.njk
@@ -16,7 +16,7 @@
 
                 {% call govukFieldset({
                     legend: {
-                        text: "Enter the date of the next court appearance",
+                        text: "Enter the date of the next court appearance" if isAddCourtAppearance else "Edit the date of the next court appearance",
                         classes: "govuk-fieldset__legend--l",
                         isPageHeading: true
                     }
