--- a/server/views/pages/courtAppearance/overall-conviction-date.njk
+++ b/server/views/pages/courtAppearance/overall-conviction-date.njk
@@ -18,7 +18,7 @@
                     errorMessage: errors | findErrorsBeginningWith('overallConvictionDate'),
                     fieldset: {
                         legend: {
-                            text: "Enter the Overall conviction date",
+                            text: "Enter the conviction date",
                             isPageHeading: true,
                             classes: "govuk-fieldset__legend--l"
                         }
