--- a/server/views/pages/courtAppearance/overall-conviction-date.njk
+++ b/server/views/pages/courtAppearance/overall-conviction-date.njk
@@ -23,6 +23,9 @@
                             classes: "govuk-fieldset__legend--l"
                         }
                     },
+                    hint: {
+                        text: "This is the overall conviction date for the court case"
+                    },
                     items: [
                         {
                             id: 'overallConvictionDate-day',
