--- a/server/views/pages/courtAppearance/next-hearing-court-name.njk
+++ b/server/views/pages/courtAppearance/next-hearing-court-name.njk
@@ -1,16 +1,18 @@
-{% extends "../../partials/prisonerBannerLayout.njk" %}
+{% extends "../../partials/prisonerBannerBackLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/select/macro.njk" import govukSelect %}
 
 
 
-{% set pageTitle = applicationName + " - Add a court case court name" %}
+{% set pageTitle = applicationName + " - Add a court case next hearing court name" %}
 
 {% block content %}
+    {{ super() }}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
-            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-next-hearing-court-name">
+            <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-next-hearing-court-name{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+                <input type="hidden" name="courtCode" id="court-code" value="{{nextHearingCourtNameForm.courtCode}}">
                 {% include "../../partials/appearanceCaption.njk" %}
                 {{ govukSelect({
                     label: {
@@ -19,71 +21,12 @@
                         isPageHeading: true
                     },
                     hint: {
-                        text: "Enter a court name, address, town or city."
+                        text: "Search for a court name, address, town or city."
                     },
                     id: "next-hearing-court-name",
                     name: "nextHearingCourtName",
-                    items: [
-                        {
-                            text: "",
-                            selected: not nextHearingCourtName
-                        },
-                        {
-                            value:"Bedford Magistrates Court",
-                            text: "Bedford Magistrates Court",
-                            selected: nextHearingCourtName === "Bedford Magistrates Court"
-                        },
-                        {
-                            value: "Birmingham Crown Court",
-                            text: "Birmingham Crown Court",
-                            selected: nextHearingCourtName === "Birmingham Crown Court"
-                        },
-                        {
-                            value: "Birmingham Magistrates Court",
-                            text: "Birmingham Magistrates Court",
-                            selected: nextHearingCourtName === "Birmingham Magistrates Court"
-                        },
-                        {
-                            value: "Bradford Magistrates Court",
-                            text: "Bradford Magistrates Court",
-                            selected: nextHearingCourtName === "Bradford Magistrates Court"
-                        },
-                        {
-                            value: "Bradford Crown Court",
-                            text: "Bradford Crown Court",
-                            selected: nextHearingCourtName === "Bradford Crown Court"
-                        },
-                        {
-                            value: "Carlisle Magistrates Court",
-                            text: "Carlisle Magistrates Court",
-                            selected: nextHearingCourtName === "Carlisle Magistrates Court"
-                        },
-                        {
-                            value: "Chester Combined Court Centre",
-                            text: "Chester Combined Court Centre",
-                            selected: nextHearingCourtName === "Chester Combined Court Centre"
-                        },
-                        {
-                            value: "Doncaster Magistrates Court",
-                            text: "Doncaster Magistrates Court",
-                            selected: nextHearingCourtName === "Doncaster Magistrates Court"
-                        },
-                        {
-                            value: "Leeds Combined Court Centre",
-                            text: "Leeds Combined Court Centre",
-                            selected: nextHearingCourtName === "Leeds Combined Court Centre"
-                        },
-                        {
-                            value: "Luton Crown Court",
-                            text: "Luton Crown Court",
-                            selected: nextHearingCourtName === "Luton Crown Court"
-                        },
-                        {
-                            value: "Luton Magistrates Court",
-                            text: "Luton Magistrates Court",
-                            selected: nextHearingCourtName === "Luton Magistrates Court"
-                        }
-                    ]
+                    errorMessage: errors | findError('nextHearingCourtName'),
+                    items: []
                 }) }}
 
                 {{ govukButton({
@@ -98,5 +41,5 @@
 
 {% block javascripts %}
     <script src="/assets/accessible-autocomplete.min.js"></script>
-    <script id="autocomplete-script" src="/assets/js/autoCompleteNextHearingCourtName.js" data-next-hearing-court-name="{{ nextHearingCourtName if nextHearingCourtName else '' }}"></script>
+    <script id="autocomplete-script" src="/assets/js/autoCompleteNextHearingCourtName.js" data-next-hearing-court-name="{{ nextHearingCourtNameForm.nextHearingCourtName if nextHearingCourtNameForm.nextHearingCourtName else '' }}"></script>
 {% endblock %}
