RASS-330 integrate court register with check answers page

--- a/server/views/pages/courtAppearance/check-answers.njk
+++ b/server/views/pages/courtAppearance/check-answers.njk
@@ -42,7 +42,7 @@
                             text: "Court name"
                         },
                             value: {
-                            text: courtAppearance.courtName
+                            text: courtName
                         },
                             actions: {
                             items: [
