RASS-331 integrate court register with check next hearing answers page

--- a/server/views/pages/courtAppearance/check-next-hearing-answers.njk
+++ b/server/views/pages/courtAppearance/check-next-hearing-answers.njk
@@ -54,7 +54,7 @@
                             text: "Next hearing location"
                         },
                             value: {
-                            text: courtAppearance.nextHearingCourtName
+                            text: nextHearingCourtName
                         },
                             actions: {
                             items: [
