RASS-332 integrate court register with check offence answers page

--- a/server/views/pages/offence/check-offence-answers.njk
+++ b/server/views/pages/offence/check-offence-answers.njk
@@ -45,7 +45,7 @@
                                 text: "Court name"
                             },
                             value: {
-                                text: courtAppearance.courtName
+                                text: courtAppearanceCourtName
                             }
                         },
                         {
