RASS-335 lookup court name for previously selected court

--- a/server/views/pages/courtAppearance/court-name.njk
+++ b/server/views/pages/courtAppearance/court-name.njk
@@ -25,7 +25,7 @@
                     },
                     id: "court-name",
                     name: "courtName",
-                    errorMessage: errors | findError('courtName'),
+                    errorMessage: errors | findError('courtCode'),
                     items: []
                 }) }}
 
