RASS-336 lookup court name for previously selected next hearing court

--- a/server/views/pages/courtAppearance/next-hearing-court-name.njk
+++ b/server/views/pages/courtAppearance/next-hearing-court-name.njk
@@ -25,7 +25,7 @@
                     },
                     id: "next-hearing-court-name",
                     name: "nextHearingCourtName",
-                    errorMessage: errors | findError('nextHearingCourtName'),
+                    errorMessage: errors | findError('courtCode'),
                     items: []
                 }) }}
 
