RASS-315 lookup offence name in appearance details layout

--- a/server/views/components/offenceSummaryRow/macro.njk
+++ b/server/views/components/offenceSummaryRow/macro.njk
@@ -1,3 +1,3 @@
-{% macro offenceSummaryRow(offence) %}
+{% macro offenceSummaryRow(offence, offenceNameMap) %}
   {%- include "./template.njk" -%}
 {% endmacro %}
