--- a/server/views/pages/offence/check-offence-answers.njk
+++ b/server/views/pages/offence/check-offence-answers.njk
@@ -87,6 +87,7 @@
                         offenceEndDate: offence.offenceEndDate | formatDate,
                         outcome: offence.outcome,
                         countNumber: offence.sentence.countNumber,
+                        convictionDate: offence.sentence.convictionDate | formatDate,
                         terrorRelated: offence.terrorRelated,
                         isSentenced: offence.sentence,
                         custodialSentenceLength: offence.sentence.custodialSentenceLength,
