RASS-297 get sentence types from api

--- a/server/views/pages/offence/sentence-type.njk
+++ b/server/views/pages/offence/sentence-type.njk
@@ -4,6 +4,16 @@
 
 {% set pageTitle = applicationName + " - Sentence type " %}
 
+{% set sentenceTypeItems = [] %}
+
+{% for sentenceType in sentenceTypes %}
+    {% set sentenceTypeItems = sentenceTypeItems.concat({
+        value: sentenceType.description,
+        text: sentenceType.description,
+        checked: offenceSentenceTypeForm.sentenceType === sentenceType.description
+    })%}
+{% endfor %}
+
 {% block pageContent %}
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ offenceReference }}/submit-sentence-type{{ "?submitToEditOffence=true" if submitToEditOffence }}">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
@@ -20,32 +30,7 @@
                         }
                     },
                     errorMessage:  errors | findError('sentenceType'),
-                    items: [
-                    {
-                        value: "SDS (Standard Determinate Sentence)",
-                        text: "SDS (Standard Determinate Sentence)",
-                        checked: offenceSentenceTypeForm.sentenceType === 'SDS (Standard Determinate Sentence)'
-                    },
-                    {
-                        value: "EDS (Extended Determinate Sentence)",
-                        text: "EDS (Extended Determinate Sentence)",
-                        checked: offenceSentenceTypeForm.sentenceType === 'EDS (Extended Determinate Sentence)'
-                    },{
-                        value: "SOPC (Special Custodial Sentence for Certain Offenders of Particular Concern)",
-                        text: "SOPC (Special Custodial Sentence for Certain Offenders of Particular Concern)",
-                        checked: offenceSentenceTypeForm.sentenceType === 'SOPC (Special Custodial Sentence for Certain Offenders of Particular Concern)',
-                        hint: {
-                            text: "A mandatory licence period of 12 months will automatically be added to the sentence"
-                        }
-                    },{
-                        value: "DTO (Detention and Training Order)",
-                        text: "DTO (Detention and Training Order)",
-                        checked: offenceSentenceTypeForm.sentenceType === 'DTO (Detention and Training Order)'
-                    },{
-                        value: "A/FINE",
-                        text: "A/FINE",
-                        checked: offenceSentenceTypeForm.sentenceType === 'A/FINE'
-                    }]
+                    items: sentenceTypeItems
                 }) }}
 
 
