RASS-341 use sentence type uuid

--- a/server/views/pages/offence/sentence-type.njk
+++ b/server/views/pages/offence/sentence-type.njk
@@ -8,9 +8,9 @@
 
 {% for sentenceType in sentenceTypes %}
     {% set sentenceTypeItems = sentenceTypeItems.concat({
-        value: sentenceType.description,
+        value: sentenceType.sentenceTypeUuid,
         text: sentenceType.description,
-        checked: offenceSentenceTypeForm.sentenceType === sentenceType.description
+        checked: offenceSentenceTypeForm.sentenceType === sentenceType.sentenceTypeUuid
     })%}
 {% endfor %}
 
