--- a/server/views/pages/offence/edit-offence.njk
+++ b/server/views/pages/offence/edit-offence.njk
@@ -63,7 +63,7 @@
                     text: "Sentence type"
                 },
                     value: {
-                    text: offence.sentence.sentenceType
+                    text: offence.sentence.sentenceTypeId
                 },
                     actions: {
                         items: [{
