RASS-340 integrate with retrieve sentence type endpoints

--- a/server/views/pages/courtAppearance/details.njk
+++ b/server/views/pages/courtAppearance/details.njk
@@ -236,7 +236,7 @@
                         licencePeriodLength: offence.sentence.licencePeriodLength,
                         sentenceServeType: offence.sentence.sentenceServeType,
                         consecutiveTo: offence.sentence.consecutiveTo,
-                        sentenceType: offence.sentence.sentenceType,
+                        sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId],
                         actions: {
                             items: [
                                 {
