--- a/server/views/pages/courtCaseDetails.njk
+++ b/server/views/pages/courtCaseDetails.njk
@@ -71,7 +71,7 @@
                             licencePeriodLength: charge.sentence.extendedLicensePeriodLength | periodLengthToSentenceLength,
                             sentenceServeType: charge.sentence.sentenceServeType,
                             consecutiveTo: charge.sentence.consecutiveToChargeNumber,
-                            sentenceType: charge.sentence.sentenceType,
+                            sentenceType: charge.sentence.sentenceType.description,
                             detailsClasses: 'govuk-!-padding-4'
                         })
                     }}
