--- a/server/views/pages/offence/review-offences.njk
+++ b/server/views/pages/offence/review-offences.njk
@@ -28,7 +28,7 @@
                         terrorRelated: offence.terrorRelated,
                         isSentenced: offence.sentence,
                         custodialSentenceLength: offence.sentence.custodialSentenceLength,
-                        sentenceType: offence.sentence.sentenceType
+                        sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence
                     })
                 }}
             {% endfor %}
