--- a/server/views/pages/offence/review-offences.njk
+++ b/server/views/pages/offence/review-offences.njk
@@ -27,7 +27,7 @@
                         convictionDate: offence.sentence.convictionDate | formatDate,
                         terrorRelated: offence.terrorRelated,
                         isSentenced: offence.sentence,
-                        custodialSentenceLength: offence.sentence.custodialSentenceLength,
+                        custodialSentenceLength: offence.sentence.periodLengths | findPeriodLengthByType("SENTENCE_LENGTH"),
                         sentenceType: sentenceTypeMap[offence.sentence.sentenceTypeId] if offence.sentence
                     })
                 }}
