--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -154,7 +154,7 @@
                                     convictionDate: offence.sentence.convictionDate | formatDate,
                                     terrorRelated: offence.terrorRelated,
                                     isSentenced: offence.sentence,
-                                    custodialSentenceLength: offence.sentence.custodialSentenceLength,
+                                    custodialSentenceLength: offence.sentence.periodLengths | findPeriodLengthByType("SENTENCE_LENGTH"),
                                     sentenceType: courtCaseDetails.sentenceTypeMap[offence.sentence.sentenceTypeId]
                                 })
                             }}
