RASS-298 sentence length page (#416)
* RASS-298 start a period length page

* export headings

* fixes

* switch to period lengths in session rather than custodialSentenceLength

* fix edit offence and offence cards

* switch to period length page, cleanup

* edit offence fix

--- a/server/views/pages/offence/edit-offence.njk
+++ b/server/views/pages/offence/edit-offence.njk
@@ -77,11 +77,11 @@
                     text: "Sentence length"
                 },
                     value: {
-                    text: offence.sentence.custodialSentenceLength | formatLengths
+                    text: offence.sentence.periodLengths | findPeriodLengthByType("SENTENCE_LENGTH") | formatLengths
                 },
                     actions: {
                         items: [{
-                            href: "/person/" +  nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offenceReference + "/sentence-length?submitToEditOffence=true",
+                            href: "/person/" +  nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offenceReference + "/period-length?periodLengthType=SENTENCE_LENGTH&submitToEditOffence=true",
                             text: "Edit",
                             visuallyHiddenText: "sentence length"
                         }]
