RASS-291 edit content

--- a/server/views/pages/courtAppearance/next-hearing-court-name.njk
+++ b/server/views/pages/courtAppearance/next-hearing-court-name.njk
@@ -16,7 +16,7 @@
                 {% include "../../partials/appearanceCaption.njk" %}
                 {{ govukSelect({
                     label: {
-                        text: "What court is the next hearing at?",
+                        text: "What court is the next hearing at?"  if isAddCourtAppearance else "Edit next court hearing location",
                         classes: "govuk-label--l",
                         isPageHeading: true
                     },
